--- a/starweb/app/views/invoices/edit.html.erb
+++ b/starweb/app/views/invoices/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>New Invoice</h1>
+<h1>Editing Invoice</h1>
 
 <%= render 'form', invoice: @invoice %>
 
+<%= link_to 'Show', @invoice %> |
 <%= link_to 'Back', invoices_path %>
