--- a/starweb/app/views/products/index.html.erb
+++ b/starweb/app/views/products/index.html.erb
@@ -8,9 +8,19 @@
 </div>
 <hr>
 
-<% if current_user.is_secretary? %>
-  <%= link_to 'Nuevo', new_product_path, class: 'btn btn-primary'%>
-<% end %>
+<div class="row mb-2">
+  <!-- New client -->
+  <div class="col-1">
+    <%= link_to 'Nuevo', new_product_path, class: 'btn btn-primary' %>
+  </div>
+  <div class="col-3">
+    <!-- Search -->
+    <%= form_tag(products_path, method: :get, class: 'form-inline') do %>
+      <%= text_field_tag :term, params[:term], class: 'form-control mr-sm-2', autofocus: true %>
+      <%= submit_tag 'Search', name: nil, class: 'btn btn-outline-success my-2 my-sm-0' %>
+    <% end %>
+  </div>
+</div>
 <!-- Content -->
 <div class="row">
     <% if @products.empty? %>
