Add search for sponsors

--- a/starweb/app/views/products/index.html.erb
+++ b/starweb/app/views/products/index.html.erb
@@ -9,7 +9,7 @@
 <hr>
 
 <div class="row mb-2">
-  <!-- New client -->
+  <!-- New product -->
   <div class="col">
     <%= link_to 'Nuevo', new_product_path, class: 'btn btn-primary' %>
   </div>
