--- a/starweb/app/views/supplies/index.html.erb
+++ b/starweb/app/views/supplies/index.html.erb
@@ -9,7 +9,7 @@
 <hr>
 
 <div class="row mb-2">
-  <!-- New client -->
+  <!-- New supply -->
   <div class="col">
     <%= link_to 'Nuevo', new_supply_path, class: 'btn btn-primary' %>
   </div>
