Pagination for clients

--- a/starweb/app/views/clients/index.html.erb
+++ b/starweb/app/views/clients/index.html.erb
@@ -62,7 +62,16 @@
         </tbody>
       </table>
     </div>
+
     <%end%>
   </div>
+
+  <!-- Pagination -->
+  <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+    <%= will_paginate @clients, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
+    </ul>
+  </nav>
+  
   </div>
 </div>
