Pagination in products

--- a/starweb/app/views/clients/index.html.erb
+++ b/starweb/app/views/clients/index.html.erb
@@ -28,7 +28,7 @@
   <div class="row">
     <% if @clients.empty? %>
     <div class="col-md-4 col-sm-6">
-      <p class="alert alert-warning">No ha agregado ningún pedido</p>
+      <p class="alert alert-warning">No ha encontrado ningún cliente</p>
     </div>
     <% else %>
     <div class="table-responsive">
