--- a/starweb/app/views/products/index.html.erb
+++ b/starweb/app/views/products/index.html.erb
@@ -25,7 +25,7 @@
 <div class="row">
     <% if @products.empty? %>
         <div class="col-md-4 col-sm-5">
-          <p class="alert alert-warning">No ha agregado ningún producto</p>
+          <p class="alert alert-warning">No ha encontrado ningún producto</p>
         </div>
     <% else %>
     <% @products.each do |product| %>
@@ -81,4 +81,10 @@
       <%end%>
     <%end%>
   </div>
+    <!-- Pagination -->
+  <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+    <%= will_paginate @products, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
+    </ul>
+  </nav>
 </div>
