Pagination with Kamimari

--- a/starweb/app/views/orders/index.html.erb
+++ b/starweb/app/views/orders/index.html.erb
@@ -80,12 +80,7 @@
           <%end%>
         </div>
       </div>
-
     <!-- Pagination -->
-    <nav aria-label="Page navigation example">
-      <ul class="pagination justify-content-center">
-      <%= will_paginate @clients, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
-      </ul>
-    </nav>
+    <%= render 'partials/pagination', paginate: @orders%>
   </div>
 </div>
