--- a/starweb/app/views/sponsors/index.html.erb
+++ b/starweb/app/views/sponsors/index.html.erb
@@ -50,9 +50,5 @@
     <%end%>
   </div>
   <!-- Pagination -->
-  <nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
-    <%= will_paginate @sponsors, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
-    </ul>
-  </nav>
+  <%= render 'partials/pagination', paginate: @sponsors%>
 </div>
