--- a/starweb/app/views/supplies/index.html.erb
+++ b/starweb/app/views/supplies/index.html.erb
@@ -48,9 +48,5 @@
   <%end%>
   </div>
   <!-- Pagination -->
-  <nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
-    <%= will_paginate @clients, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
-    </ul>
-  </nav>
+  <%= render 'partials/pagination', paginate: @supplies%>
 </div>
