--- a/starweb/app/views/clients/index.html.erb
+++ b/starweb/app/views/clients/index.html.erb
@@ -67,11 +67,7 @@
   </div>
 
   <!-- Pagination -->
-  <nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
-    <%= will_paginate @clients, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
-    </ul>
-  </nav>
+  <%= render 'partials/pagination', paginate: @clients%>
   
   </div>
 </div>
